@@ -25,6 +25,8 @@ dpkg (1.16.0) UNRELEASED; urgency=low
   * Do not fail when trying to remove the root directory. This will only
     happen either on distributions where dpkg is a foreign package manager,
     or on artificial dpkg databases.
+  * Always warn when parsing any package control data which does not have
+    an Architecture field.
 
   [ Raphaël Hertzog ]
   * Fail properly when debian/source/format is empty. Closes: #600854
